Finish frontend, tweak backend to be faster

--- a/app/src/static/css/shuffle.css
+++ b/app/src/static/css/shuffle.css
@@ -80,6 +80,11 @@ a {
     min-height: 150px;
 }
 
+.stream-title-link:hover {
+    text-decoration: underline;
+    text-decoration-color: #fff;
+}
+
 .stream-status {
     display: flex;
     align-items: center;
